Fix spacing and checking capability

--- a/imports/plugins/included/default-theme/client/styles/dashboard/orders.less
+++ b/imports/plugins/included/default-theme/client/styles/dashboard/orders.less
@@ -225,6 +225,8 @@
 
 .invoice-actions {
   display: flex;
+  padding-top: 20px;
+
   div {
     &.invoice-action-cancel {
       flex: 2;
@@ -252,7 +254,7 @@
       flex: 1;
 
       &:first-child {
-        flex: 2;
+        flex: 4;
       }
 
       &:last-child {
@@ -278,7 +280,7 @@
         flex: 1;
 
         &:first-child {
-          flex: 2
+          flex: 5
         }
 
         &:last-child {
